[package]
name = "fake_sustain"
version = "0.1.0"
edition = "2021"
authors = ["Davvos11 <vosdavid2@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://dovatvis.nl"
description = "Hold note off messages when sustain pedals is pressed"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = {workspace = true}

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
