[package]
name = "keyboard_mirror"
version = "0.1.0"
edition = "2021"
authors = ["Davvos11 <vosdavid2@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://dovatvis.nl"
description = "Mirrors a MIDI keyboard ofzo"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = {workspace = true}

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
